[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"

[dependencies]
async-channel = "1.7"
crossbeam = "0.8"
crossbeam-channel = "0.5"
flume = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
kanal = { git = "https://github.com/fereidani/kanal" }
kanal-std-mutex = { path = "kanal2", features = ["std-mutex"], package = "kanal" }
monoio = "0.0.9"
local-sync = "0.0.5"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = 'thin'
panic = 'abort'
codegen-units = 1
rpath = false


[[bin]]
name = "crossbeam-channel"
path = "crossbeam-channel.rs"
doc = false

[[bin]]
name = "kanal"
path = "kanal.rs"
doc = false

[[bin]]
name = "kanal-async"
path = "kanal-async.rs"
doc = false

[[bin]]
name = "kanal-std-mutex"
path = "kanal-std-mutex.rs"
doc = false

[[bin]]
name = "kanal-std-mutex-async"
path = "kanal-std-mutex-async.rs"
doc = false

[[bin]]
name = "flume"
path = "flume.rs"
doc = false

[[bin]]
name = "flume-async"
path = "flume-async.rs"
doc = false

[[bin]]
name = "futures-channel"
path = "futures-channel.rs"
doc = false

[[bin]]
name = "mpsc"
path = "mpsc.rs"
doc = false

[[bin]]
name = "async-channel"
path = "async-channel.rs"
doc = false

[[bin]]
name = "kanal-local"
path = "kanal-local.rs"
doc = false

[[bin]]
name = "kanal-local-monoio"
path = "kanal-local-monoio.rs"
doc = false

[[bin]]
name = "flume-monoio"
path = "flume-monoio.rs"
doc = false

[[bin]]
name = "futures-channel-local"
path = "futures-channel-local.rs"
doc = false

[[bin]]
name = "futures-channel-local-monoio"
path = "futures-channel-local-monoio.rs"
doc = false

[[bin]]
name = "local_sync"
path = "local_sync.rs"
doc = false

[patch.crates-io]
# Remove this when this pr got merged https://github.com/monoio-rs/local-sync/pull/1 and new release come out
# rev is used to avoid `supply chain attack`
local-sync = { git = "https://github.com/Wireless4024/local-sync.git", rev = "a55969a8" }
